--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Colors",
+  "name": "Cores",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -15,7 +15,7 @@
     "ios": "react-native-scripts ios",
     "test": "node node_modules/jest/bin/jest.js --watch"
   },
-  "author": "nbkhope",
+  "author": "ABELLINI",
   "license": "MIT",
   "jest": {
     "preset": "jest-expo"
